# monad-factory

./: .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  biome.json  lefthook.yml  mise.toml  moon.yml  package.json  tsconfig.base.json  workspace.toml
.cargo/: config.toml
.github/: labels.yml
.github/issues/: WP-E00-001-finalize-maximal-functional-v1-scope-document.md  WP-E00-002-define-github-issue-taxonomy.md  WP-E01-001-create-documentation-skeleton.md  WP-E01-002-add-documentation-standards.md  WP-E02-001-create-adr-system.md  WP-E02-002-create-initial-adrs.md  WP-E03-001-create-root-governance-files.md  WP-E03-002-create-base-directory-structure.md  WP-E04-001-add-tool-version-management-with-mise.md  WP-E04-002-add-bun-workspace.md  WP-E04-003-add-formatting-and-hooks.md  WP-E05-001-add-frontmatter-check.md  WP-E06-001-configure-moon-workspace.md  WP-E07-001-create-core-ci-workflow.md
.github/workflows/: ci.yml
.monad/: config.toml
.monad/memory/: MEMORY.md
.moon/: toolchains.yml  workspace.yml
crates/monad-agent/: Cargo.toml
crates/monad-agent/src/: lib.rs
crates/monad-cli/: Cargo.toml
crates/monad-cli/src/: cli.rs  command_catalog.rs  main.rs
crates/monad-cli/src/commands/: check.rs  context.rs  graph.rs  info.rs  inspect.rs  list.rs  memory.rs  mod.rs
crates/monad-cli/tests/: smoke.rs
crates/monad-config/: Cargo.toml
crates/monad-config/src/: lib.rs
crates/monad-context/: Cargo.toml
crates/monad-context/src/: lib.rs
crates/monad-core/: Cargo.toml
crates/monad-core/src/: aggregate_check.rs  context_foundation.rs  graph.rs  lib.rs  memory.rs
crates/monad-deploy/: Cargo.toml
crates/monad-deploy/src/: lib.rs
crates/monad-generator/: Cargo.toml
crates/monad-generator/src/: lib.rs
crates/monad-marketplace/: Cargo.toml
crates/monad-marketplace/src/: lib.rs
crates/monad-memory/: Cargo.toml
crates/monad-memory/src/: lib.rs
crates/monad-nx-adapter/: Cargo.toml
crates/monad-nx-adapter/src/: lib.rs
crates/monad-plugin/: Cargo.toml
crates/monad-plugin/src/: lib.rs
crates/monad-policy/: Cargo.toml
crates/monad-policy/src/: lib.rs
crates/monad-registry/: Cargo.toml
crates/monad-registry/src/: lib.rs
crates/monad-runtime/: Cargo.toml
crates/monad-template/: Cargo.toml
crates/monad-template/src/: lib.rs
crates/monad-templates/: Cargo.toml
crates/monad-validation/: Cargo.toml
crates/monad-validation/src/: lib.rs
docs/: 00-index.md
docs/adr/: 00-index.md  0000-adr-template.md  0001-use-maximal-functional-polyglot-product-factory-monorepo.md  0002-use-monad-as-public-repo-control-plane.md  0003-use-mise-for-toolchain-management.md  0004-use-native-language-toolchains-under-root-orchestration.md  0005-use-rust-for-monad-cli.md  0006-include-llm-agnostic-monad-memory.md  0007-keep-ai-memory-local-first-inspectable-policy-governed.md  0008-use-generated-ai-tool-adapters.md  0009-include-daemon-mode.md  0010-include-nx-as-graph-cache-affected-task-adapter.md  0011-keep-monad-commands-stable-when-underlying-tools-change.md  0012-treat-handoffs-and-context-packs-as-first-class-artifacts.md  0013-include-policy-as-code.md  0014-include-template-plugin-and-marketplace-systems.md  0015-include-kubernetes-cloud-and-advanced-devops-integration-paths.md  0016-include-multi-repo-and-organization-governance-foundations.md  0017-include-hosted-and-self-hosted-control-plane-architecture.md
docs/agents/: 00-index.md
docs/ai/: 00-index.md
docs/architecture/: 00-index.md  agnosticity.md  competitive-moat.md  sdlc-control-plane.md  technical-product-blueprint.md  toolchain-strategy.md
docs/cli/: 00-index.md  all-check.md  command-surface.md  context-command.md  foundation-check.md  graph-command.md  memory-check.md  memory-command.md  memory-inspection.md  toolchain-check.md  toolchain-inspection.md  workspace-inspection.md
docs/decisions/: 0001-build-monad-os-as-sdlc-control-plane.md  0002-use-rust-for-cli-core.md  0003-use-workspace-toml-as-canonical-manifest.md  0004-wrap-native-tools-instead-of-replacing-them.md  0005-use-fumadocs-for-documentation.md  0006-design-for-ai-cloud-and-database-agnosticism.md  0007-support-nx-under-the-monad-wrapper.md  0008-support-buck2-and-pants-as-enterprise-build-backends.md  0009-keep-the-local-core-functional-without-saas.md  0010-design-for-future-hosted-saas-control-plane.md  0011-use-policy-packs-for-governance-extensibility.md  0012-use-packs-and-plugins-for-ecosystem-extensibility.md  0013-treat-evidence-as-a-first-class-artifact.md  0014-treat-lifecycle-graph-as-the-core-product-moat.md  0015-require-human-approval-gates-for-risky-ai-actions.md  README.md  decision-backlog.md
docs/deployment/: 00-index.md
docs/federation/: 00-index.md
docs/governance/: principles.md
docs/hosted-control-plane/: 00-index.md
docs/implementation/: v0-command-spec.md  v0-data-model.md  v0-lifecycle-graph-schema.md  v0-work-packages.md
docs/marketplace/: 00-index.md
docs/memory/: 00-index.md
docs/planning/: 00-index.md  0000-github-labels.md  design-adjustment-1.md  design-adjustment-2.md  idea.md  preimplementation-notes.md
docs/policy/: 00-index.md
docs/product/: 00-index.md  charter.md  positioning.md  prd.md  v1-maximal-functional-scope-and-delivery-plan.md  vision.md
docs/publishing/: 00-index.md
docs/roadmap/: initial-implementation-sequence.md  v0-v1-v2-roadmap.md
docs/runbooks/: 00-index.md
docs/sdlc/: full-sdlc-coverage.md
docs/strategy/: next-steps.md
docs/tutorials/: 00-index.md
policies/agent/: agent-permissions.md  human-approval-policy.md
policies/ai/: ai-usage-policy.md  prompt-injection-policy.md
policies/architecture/: architecture-policy.md
policies/dependency/: dependency-policy.md
policies/memory/: memory-policy.md
policies/organization/: organization-governance-policy.md
scripts/: check-ci.sh  check-foundation.sh  check-root-toolchain.sh  check-rust-workspace.sh  doctor.py  scaffold-cli-foundation.py
(+35 files in other folders)
