[package]
name = "monad-cli"
description = "Public monad command-line interface."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "monad"
path = "src/main.rs"

[dependencies]
monad-core = { path = "../monad-core" }

[lints]
workspace = true
