[package]
name = "monad-cli"
description = "Public monad command-line interface."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "monad"
path = "src/main.rs"

[dependencies]
assert_cmd = "2.2.2"
monad-core = { path = "../monad-core" }
predicates = "3.1.4"

[lints]
workspace = true
