[package]
name = "monad-config"
description = "Configuration loading, validation, and normalization for Monad Factory."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "monad_config"
path = "src/lib.rs"

[dependencies]
monad-core = { path = "../monad-core" }

[lints]
workspace = true
