[package]
name = "monad-core"
description = "Core domain primitives and shared runtime contracts for Monad Factory."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "monad_core"
path = "src/lib.rs"

[lints]
workspace = true
