[package]
name = "monad-deploy"
description = "Deployment integration primitives for Docker, Kubernetes, Nomad, Helm, and OpenTofu paths."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "monad_deploy"
path = "src/lib.rs"

[dependencies]
monad-core = { path = "../monad-core" }

[lints]
workspace = true
