[package]
name = "monad-policy"
description = "Policy-as-code interfaces and governance checks for Monad Factory."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "monad_policy"
path = "src/lib.rs"

[dependencies]
monad-core = { path = "../monad-core" }

[lints]
workspace = true
