[package]
name = "monad-registry"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
monad-core.workspace = true

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
camino.workspace = true
fs-err.workspace = true
tracing.workspace = true
